--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -96,7 +96,7 @@
         <li>Иностранный язык: французский;</li>
         <li>Водительское удостоверение: категория В.</li>
     </ul>
-
+<!-- Test git pull -->
 </body>
 
 </html>
