--- a/Homework1/index.html
+++ b/Homework1/index.html
@@ -97,6 +97,7 @@
         <li>Водительское удостоверение: категория В.</li>
     </ul>
 <!-- Test git pull -->
+<!--     Second git pull test -->
 </body>
 
 </html>
