--- a/index.html
+++ b/index.html
@@ -10,31 +10,45 @@
   <body>
     <div class="maincontainer">
       <ul class="level1">
-        <li><a href="Homework1/index.html">Homework 1</a></li>
+        <li><a href="Homework1/index.html" target="_blank">Homework 1</a></li>
         <li>
           <span>Homework 2</span>
           <ul class="level2">
-            <li><a href="Homework2/Homework CV/index.html">CV</a></li>
-            <li><a href="Homework2/Homework markup/index.html">Markup</a></li>
+            <li>
+              <a href="Homework2/Homework CV/index.html" target="_blank">CV</a>
+            </li>
+            <li>
+              <a href="Homework2/Homework markup/index.html" target="_blank"
+                >Markup</a
+              >
+            </li>
           </ul>
         </li>
-        <li><a href="Homework3/index.html">Homework 3</a></li>
+        <li><a href="Homework3/index.html" target="_blank">Homework 3</a></li>
         <li>
           <span>Homework 4</span>
           <ul class="level2">
-            <li><a href="Homework4/1/index.html">Homework 4/1</a></li>
-            <li><a href="Homework4/2/index.html">Homework 4/2</a></li>
+            <li>
+              <a href="Homework4/1/index.html" target="_blank">Homework 4/1</a>
+            </li>
+            <li>
+              <a href="Homework4/2/index.html" target="_blank">Homework 4/2</a>
+            </li>
           </ul>
         </li>
-        <li><a href="Homework5/index.html">Homework 5</a></li>
+        <li><a href="Homework5/index.html" target="_blank">Homework 5</a></li>
         <li>
           <span>Homework 6</span>
           <ul class="level2">
-            <li><a href="Homework6/Homework6.jpg">Homework 6/1</a></li>
-            <li><a href="Homework6.2/index.html">Homework 6/2</a></li>
+            <li>
+              <a href="Homework6/Homework6.jpg" target="_blank">Homework 6/1</a>
+            </li>
+            <li>
+              <a href="Homework6.2/index.html" target="_blank">Homework 6/2</a>
+            </li>
           </ul>
         </li>
-        <li><a href="Homework7/index.html">Homework7</a></li>
+        <li><a href="Homework7/index.html" target="_blank">Homework7</a></li>
       </ul>
     </div>
   </body>
