html&css hw8 mainpage done

--- a/Homework8/index.html
+++ b/Homework8/index.html
@@ -16,11 +16,16 @@
             <p>Shelter for pets in Boston</p>
           </div>
           <nav>
-            <ul>
-              <li><a href="#" class="link_about">About the shelter</a></li>
-              <li><a href="#" class="link_pets">Our pets</a></li>
-              <li><a href="#" class="link_help">Help the shelter</a></li>
-              <li><a href="#" class="link_contacts">Contacts</a></li>
+            <ul class="level_1">
+              <li>
+                <a href="#"><img src="images/Burger-light.png" alt="" /></a>
+                <ul class="level_2">
+                  <li><a href="#" class="link_about">About the shelter</a></li>
+                  <li><a href="#" class="link_pets">Our pets</a></li>
+                  <li><a href="#" class="link_help">Help the shelter</a></li>
+                  <li><a href="#" class="link_contacts">Contacts</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </div>
@@ -38,6 +43,8 @@
       </div>
     </header>
     <main>
+      <!-- maincontainer inside sections due to gray background on even
+      sections -->
       <section class="section-about">
         <div class="maincontainer">
           <img src="images/about-pets.png" alt="about-pets" />
