html&css hw8 done

--- a/Homework8/index.html
+++ b/Homework8/index.html
@@ -21,7 +21,9 @@
                 <a href="#"><img src="images/Burger-light.png" alt="" /></a>
                 <ul class="level_2">
                   <li><a href="#" class="link_about">About the shelter</a></li>
-                  <li><a href="#" class="link_pets">Our pets</a></li>
+                  <li>
+                    <a href="our_pets.html" class="link_pets">Our pets</a>
+                  </li>
                   <li><a href="#" class="link_help">Help the shelter</a></li>
                   <li><a href="#" class="link_contacts">Contacts</a></li>
                 </ul>
