html&css hw8 done

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
           </ul>
         </li>
         <li><a href="Homework7/index.html" target="_blank">Homework 7</a></li>
+        <li>
+          <span>Homework 8</span>
+          <ul class="level2">
+            <li>
+              <a href="Homework8/index.html" target="_blank"
+                >Homework 8 index</a
+              >
+            </li>
+            <li>
+              <a href="Homework8/our_pets.html" target="_blank"
+                >Homework 8 our pets</a
+              >
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   </body>
