html&css hw8 our_pets link & carousel margin fixed

--- a/Homework8/our_pets.html
+++ b/Homework8/our_pets.html
@@ -20,7 +20,7 @@
               <li>
                 <a href="#"><img src="images/Burger.png" alt="" /></a>
                 <ul class="level_2">
-                  <li><a href="#" class="link_about">About the shelter</a></li>
+                  <li><a href="index.html" class="link_about">About the shelter</a></li>
                   <li><a href="#" class="link_pets">Our pets</a></li>
                   <li><a href="#" class="link_help">Help the shelter</a></li>
                   <li><a href="#" class="link_contacts">Contacts</a></li>
